# cuttoclip

./: .gitignore  CutToClip-Beta-Fungsional-untuk-Tester-Windows.md  CutToClip-Beta-dan-Model-Akses-Publik.md  IDEA.md  README.md  modellist.md  package-lock.json  package.json  plan-sidebar.md
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  runtime-lock.json  tauri.beta.conf.json  tauri.conf.json  tauri.demo.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  provider.rs  runtime.rs  secrets.rs  supervisor.rs
apps/web/: index.html  package.json  playwright.config.ts  vite.config.ts
apps/web/e2e/: redesign.spec.ts
apps/web/src/: App.test.tsx  App.tsx  i18n.ts  styles.css  types.ts
apps/worker/: cuttoclip-worker.spec  requirements.txt  run_worker.py
apps/worker/app/: __init__.py  __main__.py  captions.py  errors.py  main.py  media.py  model_manager.py  models.py  providers.py  runtimes.py  storage.py  vision.py
apps/worker/tests/: conftest.py  test_api_jobs.py  test_captions.py  test_media.py  test_model_manager.py  test_models_storage.py  test_providers_byok.py  (+3 more)
docs/: BUILD_BETA.md  CLOUDFLARE_TUNNEL.md  NEXT_STEPS_PLAN.md  UI_UX_AUDIT.md
gateway/: .env.example  README.md  package.json
gateway/src/: admin.ts  app.ts  domain.ts  env.ts  index.ts  limiter.ts  store.ts
gateway/test/: gateway.test.ts
scripts/: build-beta.local.example.ps1  build-beta.ps1  build-demo.ps1  build-runtime.ps1  onboard-tester.ps1  package-worker.ps1  start-gateway.ps1  start-worker.ps1
(+32 files in other folders)
